2007-09-21  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #411125

	* gui/widgets/e-addressbook-view.etspec:
	* gui/contact-list-editor/e-contact-list-editor.etspec:
	Uses 'compare="collate"' instead of 'compare="string"' to handle UTF
	characters correctly.

2007-09-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #473903

	* gui/merging/eab-contact-merging.c: (mergeit):
	Fixes serious compiler warning.

2007-09-03  Srinivasa Ragavan  <sragavan@novell.com>

	* gui/component/addressbook-config.c: (source_to_uri_parts): Fix for a
	build break.

2007-09-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #471791 (Move away from assert to g_ret)

	* gui/component/addressbook-config.c: (ldap_unparse_auth),
	(ldap_unparse_scope), (ldap_unparse_ssl), (source_to_uri_parts):
	* gui/component/addressbook-view.c: (control_activate_cb):
	* gui/contact-list-editor/e-contact-list-editor.c:
	(e_contact_list_editor_close):
	* gui/widgets/e-addressbook-view.c: (table_double_click),
	(treeview_row_activated):
	* gui/widgets/eab-gui-util.c: (eab_search_result_dialog):
	* gui/widgets/eab-popup-control.c: (set_prop), (get_prop):
	* printing/e-contact-print.c: (contact_compare):

2007-08-27  Johnny Jacob <jjohnny@novell.com>
	 
	Committed on behalf of Ushveen Kaur <kushveen@novell.com>
	
 	** Fixes bug #352358
 
 	* gui/merging/eab-contact-commit-duplicate-detected.glade: Label
 	string of GtkLabel,id="label1" harmonised.
 	* gui/component/addressbook-view.c (rename-addressbook-folder):
 	Error tag changed from 'addressbook:no-rename-folder' to 
 	'addressbook:no-rename-folder-exists' so that error messages 
 	are harmonised.
 
2007-08-24  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #440328

	* gui/merging/eab-contact-duplicate-detected.glade:
	* gui/merging/eab-contact-merging.c: (mergeit): Missing mnemonics for 
	the 'Merge' buttons in two separate dialogs.

2007-08-23  Anand V M  <avmuttagi@gmail.com>
 
       ** Fix for bug #353462
 