@@ -1,3 +1,10 @@
+2007-10-01  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #337539
+
+	* gui/widgets/e-minicard.c: (get_left_width), (remodel):
+	Omit left column when showing list of contacts.
+
 2007-09-21  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #411125
